# fast-matrix-multiplication

./: Cargo.toml  LICENSE  README.md
benches/: benches.rs
src/: lib.rs  main.rs
