[package]
name = "fast_matrix_multiplication"
version = "0.1.0"
authors = ["stsoi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.4"

[lib]
name = "fmm"
path = "src/lib.rs"

[[bin]]
name = "fmm"
path = "src/main.rs"

[[bench]]
name = "benches"
harness = false
